<resources>
	<string name="app_name">Zapp</string>
	<string name="app_website_url">https://github.com/mediathekview/zapp</string>
	<string name="activity_main_tab_live">Live</string>
	<string name="activity_main_tab_mediathek">Mediathek</string>
	<string name="activity_main_tab_downloads">Downloads</string>
	<string name="activity_main_tab_continue_watching">Weiterschauen</string>
	<string name="activity_main_tab_bookmarks">Lesezeichen</string>
	<string name="activity_main_tab_personal">Meine Sendungen</string>
	<string name="about_summary">Zapp ist Teil von MediathekView und gibt dir einen schnellen Zugang zu vielen deutschen öffentlich-rechtlichen Fernsehsendern. Schaue ARD, ZDF und andere Sender live oder aus der Mediathek.</string>
	<string name="about_feedback_mail_subject">Zapp Feedback</string>
	<string name="changelog_title">Changelog</string>
	<string name="faq_title">FAQ</string>
	<string name="activity_channel_detail_info_error">Keine Programminfo</string>
	<string name="activity_settings_title">Einstellungen</string>
	<string name="activity_channel_selection_title">Senderliste ändern</string>
	<string name="activity_channel_selection_help_text">Ziehe an den grauen Balken, um die Sender zu sortieren.\n\nEin Klick blendet einen Sender ein oder aus.</string>
	<string name="view_program_info_show_time">%1$s – %2$s Uhr</string>
	<string name="fragment_mediathek_no_results">keine Sendungen gefunden</string>
	<string name="fragment_mediathek_time">Eingestellt</string>
	<string name="fragment_mediathek_channel">Sender</string>
	<string name="fragment_mediathek_duration">Dauer</string>
	<string name="fragment_mediathek_website">Website</string>
	<string name="fragment_mediathek_batch_subtitle">UT</string>
	<string name="fragment_mediathek_qualities_title">Qualität auswählen</string>
	<string name="fragment_mediathek_qualities_low">Niedrig</string>
	<string name="fragment_mediathek_qualities_medium">Mittel</string>
	<string name="fragment_mediathek_qualities_high">Hoch</string>
	<string name="fragment_mediathek_download">Download</string>
	<string name="fragment_mediathek_download_retry">Download wiederholen</string>
	<string name="fragment_mediathek_download_queued">Warte auf Download…</string>
	<string name="fragment_mediathek_download_running">Download läuft…</string>
	<string name="fragment_mediathek_download_delete">Download löschen</string>
	<string name="fragment_mediathek_confirm_delete_dialog_title">Datei wirklich löschen?</string>
	<string name="fragment_mediathek_confirm_delete_dialog_text">Die Video-Datei wird gelöscht und kann später nochmals herunter geladen werden.</string>
	<string name="fragment_mediathek_query_info">%1$s Suchergebnisse vom %2$s</string>
	<string name="fragment_personal_no_results_downloads">keine Downloads gefunden</string>
	<string name="fragment_personal_no_results_continue_watching">keine begonnenen Sendungen gefunden</string>
	<string name="fragment_personal_no_results_bookmarks">keine Lesezeichen gefunden</string>
	<string name="fragment_personal_today">Heute</string>
	<string name="error_informal">Upsi!</string>
	<string name="error_report">Fehler melden</string>
	<string name="error_app_crash">Entschuldigung, es gab einen Fehler.\nMöchtest du per Mail einen Fehlerbericht an den Entwickler senden, um diesen Fehler zukünftig zu beheben?</string>
	<string name="error_app_crash_tv">Entschuldigung, Zapp ist abgestürzt.</string>
	<string name="error_app_crash_mail_subject">Zapp Crash Report</string>
	<string name="error_app_crash_mail_body">Vielen Dank für die Rückmeldung!\n\nFolgende Informationen helfen den Entwicklern von Zapp, den Fehler zu beheben:\n</string>
	<string name="error_stream_unknown">Das Video kann wegen eines unbekannten Fehlers nicht wiedergegeben werden.</string>
	<string name="error_stream_no_file_access">Zapp kann nicht auf die Videodatei zugreifen.</string>
	<string name="error_stream_no_bad_http_status">Das Video existiert nicht mehr oder ist in deinem Land nicht verfügbar.</string>
	<string name="error_stream_io">Das Video konnte nicht geladen werden. Vielleicht besteht keine Internet-Verbindung oder das Video ist in deinem Land nicht verfügbar.</string>
	<string name="error_stream_unsupported">Das Video ist beschädigt oder das Format wird nicht unterstützt.</string>
	<string name="error_stream_not_in_unmetered_network">Das Abspielen über kostenpflichtige Netzwerke wurde in den Einstellungen deaktiviert.</string>
	<string name="error_mediathek_info_not_available">Es gab einen Fehler beim Laden der Mediathek. Bitte prüfe deine Internet-Verbindung.</string>
	<string name="error_mediathek_ssl_error">Dein Gerät kann keine verschlüsselte Verbindung zum Server aufbauen. Wahrscheinlich hilft es, deine Android-Version zu aktualisieren.</string>
	<string name="error_mediathek_generic_start_download_error">Der download konnte nicht gestartet werden.</string>
	<string name="error_mediathek_download_over_unmetered_network_only">Download nur über kostenlose Netzwerke erlaubt.</string>
	<string name="error_mediathek_download_no_network">Kein Internet verfügbar.</string>
	<string name="error_prefixed_message">Fehler: %s</string>
	<string name="action_play">Play</string>
	<string name="action_share">Teilen</string>
	<string name="action_bookmark">Lesezeichen setzen</string>
	<string name="action_remove_bookmark">Lesezeichen entfernen</string>
	<string name="action_continue">Weiter</string>
	<string name="action_open">Öffnen</string>
	<string name="action_cancel">Abbrechen</string>
	<string name="action_send_mail">Mail senden</string>
	<string name="action_play_in_background">Im Hintergrund abspielen</string>
	<string name="action_start_picture_in_picture">Bild im Bild</string>
	<string name="action_start_download">Download</string>
	<string name="action_delete_download">Download löschen</string>
	<string name="action_cancel_download">Download abbrechen</string>
	<string name="action_mark_unwatched">Als ungesehen markieren</string>
	<string name="action_mark_watched">Als gesehen markieren</string>
	<string name="action_view_all">Alle ansehen</string>
	<string name="search_query_hint_zapp">Zapp durchsuchen…</string>
	<string name="search_query_hint_mediathek">Mediathek durchsuchen…</string>
	<string name="delete_search_query_content_description">Suche löschen</string>
	<string name="search_filter_help_text">Gib Zahlen oder Sendernamen ein, um Filter auszuwählen!</string>
	<string name="search_suggestion_header_last_searches">Letzte Suchanfragen</string>
	<string name="search_suggestion_header_local_suggestions">Vorschläge</string>
	<string name="search_suggestion_clear_all_queries">Alle löschen</string>
	<string name="search_dialog_confirm_delete_search_history_title">Suchverlauf löschen</string>
	<string name="search_dialog_confirm_delete_search_history_text">Löscht alle vergangenen Suchanfragen.</string>
	<string name="menu_refresh">Aktualisieren</string>
	<string name="menu_retry">Wiederholen</string>
	<string name="menu_about">Über Zapp</string>
	<string name="menu_about_short">Über</string>
	<string name="menu_settings">Einstellungen</string>
	<string name="menu_feedback">Feedback</string>
	<string name="menu_filter">Filter</string>
	<string name="menu_program_info">Programm-Informationen</string>
	<string name="menu_voice_search">Sprachsuche</string>
	<string name="menu_delete_search_query_from_history">Aus Suchverlauf löschen</string>
	<string name="player_zoom_state_cropped">Gezoomt</string>
	<string name="player_zoom_state_boxed">Original</string>
	<string name="sleep_timer">Schlummerfunktion</string>
	<string name="sleep_timer_delay">Zeitspanne (in Minuten)</string>
	<string name="sleep_timer_start">Schlummerfunktion starten</string>
	<string name="sleep_timer_stop">Schlummerfunktion stoppen</string>
	<string name="sleep_timer_add_5_minutes">+5 min.</string>
	<string name="sleep_timer_add_10_minutes">+10 min.</string>
	<string name="sleep_timer_add_20_minutes">+20 min.</string>
	<string name="sleep_timer_set_15_minutes">15 min.</string>
	<string name="sleep_timer_set_30_minutes">30 min.</string>
	<string name="sleep_timer_set_60_minutes">60 min.</string>
	<string name="pref_header_appearance">Aussehen</string>
	<string name="pref_header_video_player">Player</string>
	<string name="pref_header_network">Netzwerk</string>
	<string name="pref_header_channels">Sender</string>
	<string name="pref_header_data">Daten</string>
	<string name="pref_ui_mode_title">Design</string>
	<string name="pref_language_title">Sprache</string>
	<string name="pref_detail_landscape_title">Videos immer im Querformat</string>
	<string name="pref_detail_landscape_summary">Sperrt die App im Querformat, solange ein Video läuft</string>
	<string name="pref_key_pip_on_back_title">Automatische Bild-in-Bild-Modus</string>
	<string name="pref_key_pip_on_back_summary">Setzt die Wiedergabe im Bild-in-Bild-Modus fort, wenn du den Video-Player verlässt</string>
	<string name="pref_stream_quality_cellular_title">Videoqualität in kostenpflichtigen Netzwerken</string>
	<string name="pref_stream_quality_wifi_title">Sonstige Videoqualität</string>
	<string name="pref_download_over_unmetered_network_only_title">Nur in kostenlosen Netzwerken herunter laden</string>
	<string name="pref_download_over_unmetered_network_only_summary">Videos werden nicht herunter geladen, wenn sich das Gerät z.B. im Mobilfunknetz befindet</string>
	<string name="pref_channel_selection_title">Sender anordnen</string>
	<string name="pref_shortcuts_title">Sender-Shortcuts</string>
	<string name="pref_shortcuts_summary_not_supported">Unterstützt ab Android 7.1</string>
	<string name="pref_shortcuts_summary_limit">Es können maximal 4 Shortcuts gespeichert werden</string>
	<string name="pref_shortcuts_too_many">Es können maximal 4 Shortcuts gespeichert werden.</string>
	<string name="pref_ui_mode_default">System-Standard</string>
	<string name="pref_ui_mode_light">Immer hell</string>
	<string name="pref_ui_mode_dark">Immer dunkel</string>
	<string name="pref_start_tab_title">Startseite</string>
	<string name="stream_quality_cellular_disabled">Videos nicht abspielen</string>
	<string name="stream_quality_cellular_lowest">Niedrigste Qualität</string>
	<string name="stream_quality_cellular_medium">Mittlere Qualität</string>
	<string name="stream_quality_cellular_highest">Höchste Qualität</string>
	<string name="pref_download_to_sd_card_title">Downloads auf SD-Karte</string>
	<string name="pref_download_to_sd_card_summary">Wenn verfügbar, werden Video-Dateien auf die SD-Karte gespeichert.</string>
	<string name="pref_delete_started_shows_title">Begonnene Sendungen zurücksetzen</string>
	<string name="pref_delete_started_shows_summary">Löscht den Fortschritt von allen begonnenen oder angesehenen Sendungen.</string>
	<string name="pref_dynamic_colors">Dynamische Farben</string>
	<string name="pref_dynamic_colors_summary">Wähle Akzentfarben basierend auf dem Geräte-Hintergrund.</string>
	<string name="pref_detail_search_history_title">Suchverlauf</string>
	<string name="pref_detail_search_history_summary">Speichere die letzten Suchanfragen.</string>
	<string name="pref_dialog_confirm_reset_playback_position_title">Begonnene Sendungen zurücksetzen?</string>
	<string name="pref_dialog_confirm_reset_playback_position_text">Löscht den Fortschritt von allen begonnenen oder angesehenen Sendungen. Es werden keine Downloads gelöscht.</string>
	<string name="pref_dialog_confirm_reset_playback_position_success_toast">Alle begonnene Sendungen erfolgreich zurückgesetzt</string>
	<string name="notification_channel_name_background_playback">Hintergrund-Videoplayer</string>
	<string name="notification_channel_name_download_progress">Download Fortschritt</string>
	<string name="notification_channel_name_download_event">Download Event</string>
	<string name="notification_download_queued">Der Download beginnt, sobald alle Voraussetzungen dafür erfüllt sind.</string>
</resources>