<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/quality_row_high"
	style="@style/MediathekDetailQualityRow">

	<TextView
		android:id="@+id/txt_title"
		style="@style/MediathekDetailQualityTitle"
		tools:text="@string/fragment_mediathek_qualities_high" />

	<TextView
		style="@style/MediathekDetailQualitySize"
		tools:text="13,74 MB" />

	<ImageButton
		android:id="@+id/btn_share"
		style="@style/MediathekDetailQualityButton"
		android:contentDescription="@string/action_share"
		android:src="@drawable/ic_share_white_24dp" />

	<ImageButton
		android:id="@+id/btn_download"
		style="@style/MediathekDetailQualityButton"
		android:contentDescription="@string/fragment_mediathek_download"
		android:src="@drawable/ic_file_download_white_24dp" />

</LinearLayout>
