<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="@dimen/activity_horizontal_margin"
	android:id="@+id/qualities_container"
	tools:showIn="@layout/fragment_mediathek_detail">

	<TextView
		style="@style/TextAppearance.AppCompat.Subhead"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/fragment_mediathek_qualities_title" />

	<LinearLayout
		android:id="@+id/quality_row_subtitle"
		style="@style/MediathekDetailQualityRow">

		<TextView
			style="@style/MediathekDetailQualityTitle"
			android:layout_weight="1"
			android:text="@string/fragment_mediathek_batch_subtitle" />

		<ImageButton
			android:id="@+id/btn_download_subtitle"
			style="@style/MediathekDetailQualityButton"
			android:contentDescription="@string/fragment_mediathek_download"
			android:src="@drawable/ic_file_download_white_24dp" />

	</LinearLayout>

</LinearLayout>
