<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	tools:showIn="@layout/mediathek_detail_fragment">

	<RelativeLayout
		android:id="@+id/downloadWrapper"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:animateLayoutChanges="true">

		<com.google.android.material.progressindicator.CircularProgressIndicator
			android:id="@+id/downloadProgress"
			style="@style/Widget.App.CircularProgressIndicator.Small"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_alignParentEnd="true"
			android:layout_centerVertical="true"
			android:layout_marginEnd="4dp"
			android:progress="0"
			android:visibility="gone"
			tools:progress="80"
			tools:visibility="visible" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/download"
			style="@style/ColorlessTextButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/fragment_mediathek_download"
			app:icon="@drawable/ic_baseline_save_alt_24" />

	</RelativeLayout>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/share"
		style="@style/ColorlessTextButtonStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/action_share"
		app:icon="@drawable/ic_share_white_24dp" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/website"
		style="@style/ColorlessTextButtonStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/fragment_mediathek_website"
		app:icon="@drawable/ic_outline_home_24" />

</androidx.appcompat.widget.LinearLayoutCompat>
