<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textField"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:endIconMode="clear_text"
		app:hintEnabled="false"
		app:startIconDrawable="@drawable/ic_baseline_search_24">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/search"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/search_query_hint_mediathek"
			android:imeOptions="actionSearch"
			android:inputType="textFilter"
			android:maxLines="1"
			android:paddingVertical="0dp" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textview.MaterialTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:paddingHorizontal="@dimen/activity_horizontal_margin"
		android:text="@string/fragment_mediathek_channel" />

	<com.google.android.material.chip.ChipGroup
		android:id="@+id/channels"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingHorizontal="@dimen/activity_horizontal_margin"
		app:selectionRequired="true">

		<include
			layout="@layout/view_mediathek_filter_channel_chip"
			android:visibility="gone"
			tools:visibility="visible" />

	</com.google.android.material.chip.ChipGroup>

	<com.google.android.material.textview.MaterialTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:paddingHorizontal="@dimen/activity_horizontal_margin"
		android:text="@string/fragment_mediathek_duration" />

	<com.google.android.material.slider.RangeSlider
		android:id="@+id/show_length_slider"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stepSize="1"
		android:valueFrom="0"
		android:valueTo="120"
		app:values="@array/mediathek_filter_show_length_slider_initial_values" />

</androidx.appcompat.widget.LinearLayoutCompat>
