<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:animateLayoutChanges="true">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginVertical="@dimen/activity_vertical_margin"
		android:orientation="vertical"
		tools:context=".app.mediathek.ui.detail.MediathekDetailFragment">


		<com.google.android.material.card.MaterialCardView
			style="?materialCardViewElevatedStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingStart="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingEnd="@dimen/activity_horizontal_margin"
				android:paddingBottom="@dimen/activity_vertical_margin">

				<include
					android:id="@+id/texts"
					layout="@layout/mediathek_detail_fragemnt_titles_and_description" />

				<com.google.android.material.chip.Chip
					android:id="@+id/subtitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/activity_vertical_margin"
					android:enabled="false"
					android:text="@string/fragment_mediathek_batch_subtitle" />

			</LinearLayout>

		</com.google.android.material.card.MaterialCardView>

		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginEnd="10dp"
			android:clipToPadding="false"
			android:elevation="1dp"
			android:padding="6dp">

			<ProgressBar
				android:id="@+id/viewingProgress"
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="62dp"
				android:layout_height="62dp"
				android:layout_centerInParent="true"
				android:elevation="8dp"
				android:max="100"
				android:progress="0"
				android:progressDrawable="@drawable/circular"
				android:rotation="-90"
				tools:progress="40" />

			<com.google.android.material.floatingactionbutton.FloatingActionButton
				android:id="@+id/play"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:contentDescription="@string/exo_controls_play_description"
				android:src="@drawable/ic_play_arrow_white_24dp" />

		</RelativeLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="-26dp"
			android:layout_marginBottom="@dimen/activity_vertical_margin"
			android:background="?colorPrimaryContainer"
			android:baselineAligned="false"
			android:orientation="horizontal"
			android:padding="32dp">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="vertical">

				<com.google.android.material.textview.MaterialTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/fragment_mediathek_duration"
					android:textAppearance="?textAppearanceLabelMedium"
					android:textColor="?colorOnPrimaryContainer" />

				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/duration"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?textAppearanceBodyMedium"
					android:textColor="?colorOnPrimaryContainer"
					tools:text="120 min" />

			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="vertical">

				<com.google.android.material.textview.MaterialTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/fragment_mediathek_channel"
					android:textAppearance="?textAppearanceLabelMedium"
					android:textColor="?colorOnPrimaryContainer" />

				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/channel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?textAppearanceBodyMedium"
					android:textColor="?colorOnPrimaryContainer"
					tools:text="ARTE.DE" />

			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="vertical">

				<com.google.android.material.textview.MaterialTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/fragment_mediathek_time"
					android:textAppearance="?textAppearanceLabelMedium"
					android:textColor="?colorOnPrimaryContainer" />

				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/time"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?textAppearanceBodyMedium"
					android:textColor="?colorOnPrimaryContainer"
					tools:text="vor 2 Tagen" />

			</LinearLayout>

		</LinearLayout>

		<include
			android:id="@+id/buttons"
			layout="@layout/mediathek_detail_fragment_buttons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/activity_horizontal_margin" />

	</LinearLayout>

</androidx.core.widget.NestedScrollView>
