<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/searchField"
		style="?textInputFilledStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:endIconMode="clear_text"
		app:hintEnabled="false"
		app:startIconDrawable="@drawable/ic_baseline_search_24">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/search"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/search_query_hint_mediathek"
			android:imeOptions="actionSearch"
			android:inputType="textFilter"
			android:maxLines="1"
			android:paddingVertical="0dp" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textview.MaterialTextView
		android:id="@+id/query_info"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:paddingHorizontal="@dimen/activity_horizontal_margin"
		android:textAppearance="?textAppearanceBodySmall"
		tools:text="45 Suchergebnisse vom 45.03.2022, 14:50 Uhr" />

	<com.google.android.material.textview.MaterialTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:paddingHorizontal="@dimen/activity_horizontal_margin"
		android:text="@string/fragment_mediathek_channel"
		android:textAppearance="?textAppearanceLabelLarge" />

	<com.google.android.material.chip.ChipGroup
		android:id="@+id/channels"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingHorizontal="@dimen/activity_horizontal_margin"
		app:chipSpacingVertical="0dp"
		app:selectionRequired="true">

		<include
			layout="@layout/view_mediathek_filter_chip"
			android:visibility="gone"
			tools:visibility="visible" />

	</com.google.android.material.chip.ChipGroup>

	<com.google.android.material.textview.MaterialTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:paddingHorizontal="@dimen/activity_horizontal_margin"
		android:text="@string/fragment_mediathek_duration"
		android:textAppearance="?textAppearanceLabelLarge" />

	<com.google.android.material.slider.RangeSlider
		android:id="@+id/show_length_slider"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stepSize="5.0"
		android:layout_marginHorizontal="8dp"
		android:valueFrom="@fraction/mediathek_filter_min_duration"
		android:valueTo="@fraction/mediathek_filter_max_duration"
		app:values="@array/mediathek_filter_show_length_slider_initial_values" />

	<androidx.appcompat.widget.LinearLayoutCompat
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/show_length_label_min"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:labelFor="@id/show_length_slider"
			android:paddingHorizontal="@dimen/activity_horizontal_margin"
			android:textAppearance="?textAppearanceLabelMedium"
			tools:text="0m" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/show_length_label_max"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="end"
			android:labelFor="@id/show_length_slider"
			android:paddingHorizontal="@dimen/activity_horizontal_margin"
			android:textAppearance="?textAppearanceLabelMedium"
			tools:text="∞" />

	</androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
